--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "author": "maksimyurkov <yurkov.maksim.sergeevich@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@polymer/lit-element": "@next",
-    "@polymer/paper-dialog": "@next",
-    "@polymer/paper-dialog-scrollable": "@next",
-    "@polymer/paper-button": "@next",
+    "@polymer/lit-element": "^0.5.1",
+    "@polymer/paper-dialog": "^3.0.0-pre.18",
+    "@polymer/paper-dialog-scrollable": "^3.0.0-pre.18",
+    "@polymer/paper-button": "^3.0.0-pre.18",
     "ht-storage": "https://github.com/maksimyurkov/ht-storage",
     "quill": "^1.3.5"
   }
