--- a/package.json
+++ b/package.json
@@ -1,51 +1,16 @@
 {
-  "_from": "git+https://github.com/maksimyurkov/ht-wysiwyg.git",
-  "_id": "ht-wysiwyg@1.0.0",
-  "_inBundle": false,
-  "_integrity": "",
-  "_location": "/ht-wysiwyg",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "git",
-    "raw": "ht-wysiwyg@git+https://github.com/maksimyurkov/ht-wysiwyg.git",
-    "name": "ht-wysiwyg",
-    "escapedName": "ht-wysiwyg",
-    "rawSpec": "git+https://github.com/maksimyurkov/ht-wysiwyg.git",
-    "saveSpec": "git+https://github.com/maksimyurkov/ht-wysiwyg.git",
-    "fetchSpec": "https://github.com/maksimyurkov/ht-wysiwyg.git",
-    "gitCommittish": null
-  },
-  "_requiredBy": [
-    "/ht-item-editor"
-  ],
-  "_resolved": "git+https://github.com/maksimyurkov/ht-wysiwyg.git#5c405ffc8a456acd9850497e3f0fbb5b640d25f3",
-  "_spec": "ht-wysiwyg@git+https://github.com/maksimyurkov/ht-wysiwyg.git",
-  "_where": "c:\\Users\\max\\Desktop\\elements-01-ht\\node_modules\\ht-item-editor",
-  "author": {
-    "name": "maksimyurkov",
-    "email": "yurkov.maksim.sergeevich@gmail.com"
-  },
-  "bugs": {
-    "url": "https://github.com/maksimyurkov/ht-wysiwyg/issues"
-  },
-  "bundleDependencies": false,
+  "name": "@01ht/ht-wysiwyg",
+  "version": "1.0.0",
+  "main": "ht-wysiwyg.js",
+  "repository": "01ht/ht-wysiwyg",
+  "author": "01ht Ltd",
+  "license": "UNLICENSED",
   "dependencies": {
     "@polymer/lit-element": "^0.5.1",
     "@polymer/paper-button": "^3.0.0-pre.18",
     "@polymer/paper-dialog": "^3.0.0-pre.18",
     "@polymer/paper-dialog-scrollable": "^3.0.0-pre.18",
-    "ht-storage": "git+https://github.com/maksimyurkov/ht-storage.git",
+    "@01ht/ht-storage": "^1.0.0",
     "quill": "^1.3.5"
-  },
-  "deprecated": false,
-  "description": "",
-  "homepage": "https://github.com/maksimyurkov/ht-wysiwyg#readme",
-  "license": "MIT",
-  "main": "ht-wysiwyg.js",
-  "name": "ht-wysiwyg",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/maksimyurkov/ht-wysiwyg.git"
-  },
-  "version": "1.0.0"
+  }
 }
