--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "@01ht/ht-wysiwyg",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "ht-wysiwyg.js",
   "repository": "01ht/ht-wysiwyg",
-  "author": "01ht Ltd",
+  "author": "01HT Ltd",
   "license": "UNLICENSED",
   "dependencies": {
-    "@polymer/lit-element": "^0.5.1",
+    "@polymer/lit-element": "^0.6.1",
     "@polymer/paper-button": "^3.0.0-pre.18",
+    "@polymer/paper-input": "^3.0.0-pre.18",
+    "@polymer/paper-styles": "^3.0.0-pre.18",
     "@polymer/paper-dialog": "^3.0.0-pre.18",
     "@polymer/paper-dialog-scrollable": "^3.0.0-pre.18",
     "@01ht/ht-storage": "^1.0.0",
-    "quill": "^1.3.5"
+    "quill": "1.3.5"
   }
 }
