--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@polymer/paper-styles": "^3.0.1",
     "@polymer/paper-dialog": "^3.0.1",
     "@polymer/paper-dialog-scrollable": "^3.0.1",
-    "@01ht/ht-storage": "^1.0.0",
+    "@01ht/ht-storage": "01ht/ht-storage",
     "quill": "1.3.5"
   }
 }
