--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "01ht/ht-wysiwyg",
   "author": "01HT Ltd",
   "license": "UNLICENSED",
+  "scripts": {
+    "build": "./node_modules/.bin/webpack iframe-imports-es6.js && babel ./dist/main.js -o ./iframe-imports-amd.js"
+  },
   "dependencies": {
     "@polymer/lit-element": "^0.6.1",
     "@polymer/paper-button": "^3.0.1",
@@ -14,5 +17,11 @@
     "@polymer/paper-dialog-scrollable": "^3.0.1",
     "@01ht/ht-storage": "01ht/ht-storage",
     "quill": "1.3.6"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "webpack": "^4.23.1",
+    "babel-cli": "^6.0.0"
   }
 }
