--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@polymer/paper-dialog": "^3.0.1",
     "@polymer/paper-dialog-scrollable": "^3.0.1",
     "@01ht/ht-storage": "01ht/ht-storage",
-    "quill": "1.3.6"
+    "quill": "github:01ht/quill#1.3.6"
   },
   "devDependencies": {
     "webpack-cli": "^3.1.2",
